# cpp-design-pattern

./: .gitignore  LICENSE  README.md
behavioral-patterns/Chain of Responsibility/: README.md
behavioral-patterns/Command/: README.md
behavioral-patterns/Interpreter/: README.md
behavioral-patterns/Iterator/: README.md
behavioral-patterns/Mediator/: README.md
behavioral-patterns/Memento/: README.md
behavioral-patterns/Observer/: README.md
behavioral-patterns/State/: README.md
behavioral-patterns/Strategy/: README.md
behavioral-patterns/Template Method/: README.md
behavioral-patterns/Visitor/: README.md
creational-patterns/Builder/: README.md
creational-patterns/Factory/: README.md
creational-patterns/Prototype/: README.md
creational-patterns/Singleton/: README.md
structural-patterns/Adapter/: README.md
structural-patterns/Bridge/: README.md
structural-patterns/Bridge/use-cases/GUI/: BlueColor.cpp  BlueColor.h  CMakeLists.txt  CircleShape.cpp  CircleShape.h  Color.h  GreenColor.cpp  GreenColor.h  RectangleShape.cpp  RectangleShape.h  RedColor.cpp  RedColor.h  RotationTransformation.cpp  RotationTransformation.h  ScalingTransformation.cpp  ScalingTransformation.h  Shape.h  Transformation.h  TranslationTranformation.cpp  TranslationTransformation.h  TriangleShape.cpp  TriangleShape.h  main.cpp
structural-patterns/Composite/: README.md
structural-patterns/Decorator/: README.md
structural-patterns/Facade/: README.md
structural-patterns/Flyweight/: README.md
structural-patterns/Proxy/: README.md
(+153 files in other folders)
